ajuste de layouts e funcoes commit projectAv2

--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -27,4 +27,5 @@
     <string name="sobrenos">Sobre Nós</string>
     <string name="version">Versão 1.0.0</string>
     <string name="forgot">Esqueceu a senha?</string>
+    <string name="name">Nome</string>
 </resources>
