ajuste para apresentacao de arlindo - commit projectAv2

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,4 +29,5 @@
     <string name="version">Version 1.0.0</string>
     <string name="forgot">Forgot Password?</string>
     <string name="name">Name</string>
+    <string name="title_activity_maps">Map</string>
 </resources>
